# mas-industrial-sim

mir_simulation/mir_bringup_sim/: CMakeLists.txt
mir_simulation/mir_simulation/: CMakeLists.txt
mir_simulation/mir_world_generation/: CMakeLists.txt  package.xml
mir_simulation/mir_world_generation/ros/launch/: sim[WIP].launch
