<?xml version="1.0"?>
<package format="3">
  <name>mir_world_generation</name>
  <version>0.0.1</version>
  <description>Procedurally generate world model with workstations and walls.</description>

  <license>GPLv3</license>

  <author email="dharmingeo@gmail.com">Dharmin B.</author>

  <maintainer email="dharmingeo@gmail.com">Dharmin B.</maintainer>

  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
